--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2,14 +2,14 @@
   "current": {
     "logo": "shopify:\/\/shop_images\/logo_6603e088-ad8f-4539-a279-2cb57bc624a9.svg",
     "logo_width": 130,
-    "type_header_font": "metro_nova_n5",
-    "heading_scale": 100,
-    "type_body_font": "metro_nova_n4",
+    "type_header_font": "inter_n6",
+    "heading_scale": 150,
+    "type_body_font": "inter_n4",
     "body_scale": 100,
     "page_width": 1600,
     "spacing_sections": 0,
-    "spacing_grid_horizontal": 8,
-    "spacing_grid_vertical": 8,
+    "spacing_grid_horizontal": 16,
+    "spacing_grid_vertical": 16,
     "animations_reveal_on_scroll": true,
     "animations_hover_elements": "default",
     "buttons_border_thickness": 1,
@@ -34,9 +34,9 @@
     "inputs_shadow_vertical_offset": 0,
     "inputs_shadow_blur": 5,
     "card_style": "card",
-    "card_image_padding": 4,
-    "card_text_alignment": "left",
-    "card_color_scheme": "scheme-2",
+    "card_image_padding": 0,
+    "card_text_alignment": "center",
+    "card_color_scheme": "scheme-1",
     "card_border_thickness": 0,
     "card_border_opacity": 10,
     "card_corner_radius": 16,
@@ -47,7 +47,7 @@
     "collection_card_style": "card",
     "collection_card_image_padding": 0,
     "collection_card_text_alignment": "left",
-    "collection_card_color_scheme": "scheme-2",
+    "collection_card_color_scheme": "scheme-1",
     "collection_card_border_thickness": 0,
     "collection_card_border_opacity": 10,
     "collection_card_corner_radius": 16,
@@ -73,10 +73,10 @@
     "text_boxes_shadow_horizontal_offset": 0,
     "text_boxes_shadow_vertical_offset": 4,
     "text_boxes_shadow_blur": 5,
-    "media_border_thickness": 1,
+    "media_border_thickness": 3,
     "media_border_opacity": 5,
-    "media_radius": 0,
-    "media_shadow_opacity": 0,
+    "media_radius": 8,
+    "media_shadow_opacity": 100,
     "media_shadow_horizontal_offset": 0,
     "media_shadow_vertical_offset": 4,
     "media_shadow_blur": 5,
