--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,7 +1,8 @@
 {
   "current": {
-    "logo": "shopify:\/\/shop_images\/logo_6603e088-ad8f-4539-a279-2cb57bc624a9.svg",
-    "logo_width": 130,
+    "logo": "shopify:\/\/shop_images\/Logo.png",
+    "logo_width": 80,
+    "favicon": "shopify:\/\/shop_images\/Logo_33a0e0b2-e70b-4136-9280-430f847af1f3.png",
     "type_header_font": "inter_n6",
     "heading_scale": 150,
     "type_body_font": "inter_n4",
@@ -188,6 +189,17 @@
           "button": "#ffffff",
           "button_label": "#334fb4",
           "secondary_button_label": "#ffffff",
+          "shadow": "#121212"
+        }
+      },
+      "scheme-391339d5-67c5-4c45-a262-3b4413349de5": {
+        "settings": {
+          "background": "#466895",
+          "background_gradient": "",
+          "text": "#ffffff",
+          "button": "#121212",
+          "button_label": "#ffffff",
+          "secondary_button_label": "#121212",
           "shadow": "#121212"
         }
       }
