--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -94,9 +94,9 @@
     "drawer_shadow_horizontal_offset": 0,
     "drawer_shadow_vertical_offset": 4,
     "drawer_shadow_blur": 5,
-    "badge_position": "bottom left",
+    "badge_position": "top left",
     "badge_corner_radius": 40,
-    "sale_badge_color_scheme": "scheme-4",
+    "sale_badge_color_scheme": "scheme-b9ee2917-55e9-49e9-9026-d7f246963305",
     "sold_out_badge_color_scheme": "scheme-3",
     "brand_headline": "",
     "brand_description": "<p><\/p>",
@@ -195,6 +195,17 @@
       "scheme-391339d5-67c5-4c45-a262-3b4413349de5": {
         "settings": {
           "background": "#466895",
+          "background_gradient": "",
+          "text": "#ffffff",
+          "button": "#121212",
+          "button_label": "#ffffff",
+          "secondary_button_label": "#121212",
+          "shadow": "#121212"
+        }
+      },
+      "scheme-b9ee2917-55e9-49e9-9026-d7f246963305": {
+        "settings": {
+          "background": "#ff0000",
           "background_gradient": "",
           "text": "#ffffff",
           "button": "#121212",
